app/assets/stylesheets/import-one-stop-shop-intermediary-dashboard.css
.red-background {
    background-color: #d4351c;
}

.hint {
    color: #505a5f;
}

/* Dynamic spinner for please-wait page within file upload journey */
.processing-wheel-loader {
    border: 12px solid #DEE0E2;
    border-radius: 50%;
    border-top-color: #005EA5;
    width: 50px;
    height: 50px;
    -webkit-animation: spin 2s linear infinite;
    animation: spin 2s linear infinite;
}

#processing-wheel {
    margin-top: -75px;
}

@-webkit-keyframes spin {
    0% {
        -webkit-transform: rotate(0deg);
    }

    100% {
        -webkit-transform: rotate(360deg);
    }
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

/* End of dynamic spinner */

/* Fix for accessibility Audit Non-breaking space */
.govuk-visually-hidden:before {
    content: " ";
}

.govuk-visually-hidden:after {
    content: " ";
}
/* End of Fix for accessibility Audit */

.autocomplete__input.govuk-input--error {
    border-color: #d4351c;
}
.autocomplete__dropdown-arrow-down {
    z-index: 0;
    pointer-events: none;
}
@media (min-width: 40.0625em) {
    .autocomplete__wrapper {
        width: 75% !important;
    }
}

/*Ensure the down arrow for 'show all' option sits above the input so it is visible
(there was a change - possibly either input or page background which effectively hid the arrow due to its z-index)*/
.autocomplete__dropdown-arrow-down {
    z-index: 0;
    pointer-events: none;
}

.flex-container {
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -ms-flex-direction: row;
    flex-direction: row;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    justify-content: flex-start;
    padding: 0 15px;
}

.tile {
    flex-grow: 0;
    flex-basis: 100%;
    margin-bottom: 2em;
    border: 1px solid #dee0e2;
    background: #f3f2f1;
}

@media screen and (min-width: 600px) {
    .tile {
        flex-basis: 46.99%;
    }
    .tile:nth-child(2n-2) {
        margin-left: 2%;
    }
    .tile:nth-child(2n-1) {
        margin-right: 2%;
    }
}

html[data-useragent*='MSIE 10.0'] .flex-container .tile {
    flex-basis: 31%;
    margin: 3%;
}

.tile-no-border {
    border: 0;
}

.tile .tile-body {
    border-bottom: 0px;
    padding: 12px;
}

.tile .tile-body *:last-child {
    margin-bottom: 0;
}

@media (max-width: 640px) {
    .govuk-summary-list__row {
        .govuk-table__cell--numeric {
            text-align: left;
            padding-left: 0px;
            margin-left: 0px;
        }
    }
}

.corrections-no-border {
    border: 0;
}

.width-auto {
    width: auto;
}

.dot-unread {
   height: 10px;
   width: 10px;
   background-color: #d4351c;
   border-radius: 50%;
   display: inline-block;
   margin-right: 10px;
}

